// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportFilter component should render initial state when a selectedEdition has been removed 1`] = `
<div>
   
  <section
    class="svelte-1htar53"
  >
    <div
      class="select-filter svelte-1htar53"
      data-testid="display-modal-button"
    >
      <div
        class="edition-filter svelte-1htar53"
      >
        <div
          class="icon-wrapper svelte-1htar53"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
    </div>
     
  </section>
</div>
`;

exports[`ReportFilter component should render the ReportFilter component no selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-1htar53"
  >
    <div
      class="select-filter svelte-1htar53"
      data-testid="display-modal-button"
    >
      <div
        class="edition-filter svelte-1htar53"
      >
        <div
          class="icon-wrapper svelte-1htar53"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
    </div>
     
  </section>
</div>
`;

exports[`ReportFilter component should render the ReportFilter component with a selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-1htar53"
  >
    <div
      class="selected-edition svelte-1htar53"
    >
      <div
        class="edition-filter svelte-1htar53"
      >
        <div
          class="icon-wrapper active svelte-1htar53"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          Edition
        </div>
      </div>
       
      <div
        class="clickable svelte-bktgns"
        data-testid="chip"
      >
        <span
          class="label svelte-bktgns"
        >
          Test Event / Test Edition
        </span>
         
        <span
          class="cross svelte-bktgns"
          data-testid="remove-chip-button"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 12px; --icon-height: 12px;"
          >
            <object
              src="ic-delete.svg/"
            />
          </div>
        </span>
      </div>
      
    </div>
     
  </section>
</div>
`;
